# chat

./: README.md  angular.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: main.yml  publish_release.yml  test-on-pr.yml
src/: index.html  manifest.webmanifest  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/app/: accordion.component.ts  app-routing.module.ts  app.component.ts  app.module.ts  bot-message.component.ts  chat-area.component.ts  chat-input.component.ts  chat-list.component.ts  chat.component.ts  chat.service.ts  config.component.ts  doc-viewer.component.ts  drop-down.component.ts  folder-settings.component.ts  sidebar.component.ts  user-message.component.ts
src/app/editor/: editor-details.component.ts  editor-overview.component.ts  editor.component.ts
src/app/services/: ai-providers.ts  chat.service.ts  cloud-storage.service.ts  indexeddb.service.ts  keyboardshortcut.service.ts  pipeline.service.ts  product.service.ts  storage.service.ts  theme.service.ts
src/app/shared/: safe.pipe.ts
